rustdsl/classes_macros/tests/fixme/correctness/inheritance_and_interface_precedence.stderr
error[E0080]: could not evaluate static initializer
  --> tests/fixme/correctness/inheritance_and_interface_precedence.rs:18:11
   |
18 |     class Dog extends LivingThing implements Animal {}
   |           ^^^ evaluation panicked: cannot instantiate because method `Animal::makeSound` is not implemented
   |
   = note: this error originates in the macro `::classes::_def_concrete_class` (in Nightly builds, run with -Z macro-backtrace for more info)
